<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_navi_favorite"
        android:title="@string/title_favorite"
        app:iconTint="@color/highlight"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_cafeteria"
        android:icon="@drawable/ic_navi_cafeteria"
        app:iconTint="@color/highlight"
        app:showAsAction="ifRoom"
        android:title="@string/title_cafeteria"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_navi_profile"
        app:iconTint="@color/highlight"
        app:showAsAction="ifRoom"
        android:title="@string/title_profile"/>

</menu>